# AQUADOCV2

./: DEPLOYMENT_GUIDE.md  app.py  deployment_packages.txt  replit.md
AQUADOCv2/: README.md  deployment_requirements.txt  pyproject.toml  streamlit_requirements.txt
AQUADOCv2/data/: sample_images.py
AQUADOCv2/utils/: map_utils.py  waste_detector.py
data/: water_bodies.py
models/: __init__.py  waste_detection_model.py
utils/: image_processor.py  location_analyzer.py
