[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.5.0",
    "opencv-python-headless>=4.8.0",
    "pandas>=1.5.0",
    "pillow>=9.0.0",
    "streamlit-folium>=0.20.0",
    "streamlit>=1.28.0",
    "folium>=0.14.0",
    "plotly>=5.0.0",
    "numpy>=1.21.0,<2.0.0",
    "scikit-learn>=1.3.0",

]
